--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,11 @@
                     <span id="current-temp"></span><sup style="font-size: 60%; font-weight: 390;">&deg;C</sup>
                 </p>
                 <div>
-                    <img id="current-weather-icon" style="width: 50px; height: 50px; margin: 0; padding: 0;"/>
+                    <div class="row">
+                        <img id="current-weather-icon" style="width: 50px; height: 50px; margin: 0; padding: 0;"/>
+                        <img id="day-weather-icon" style="width: 50px; height: 50px; margin: 0; padding: 0;"/>
+                    </div>
+
                     <p style="margin: 0; padding: 0;">Max: <span id="current-max"></span>&deg;C</p>
                     <p style="margin: 0; padding: 0;">Min: <span id="current-min"></span>&deg;C</p>
                 </div>
