--- a/popup.html
+++ b/popup.html
@@ -20,8 +20,8 @@
                 </p>
                 <div>
                     <div class="row">
-                        <img id="current-weather-icon" style="width: 50px; height: 50px; margin: 0; padding: 0;"/>
-                        <img id="day-weather-icon" style="width: 50px; height: 50px; margin: 0; padding: 0;"/>
+                        <img id="current-weather-icon" style="width: 50px; height: 50px; margin: 0; padding: 0;" alt="weatherimage"/>
+                        <img id="day-weather-icon" style="width: 50px; height: 50px; margin: 0; padding: 0;" alt="weatherimage"/>
                     </div>
 
                     <p style="margin: 0; padding: 0;">Max: <span id="current-max"></span>&deg;C</p>
