--- a/popup.html
+++ b/popup.html
@@ -20,8 +20,16 @@
                     <span id="current-temp"></span><sup style="font-size: 60%; font-weight: 390;">&deg;C</sup>
                 </p>
                 <div>
-                    <img id="day-weather-icon" style="width: 50px; height: 50px; margin: 0; padding: 0; margin-top: 15px; margin-bottom: -16px; margin-left: 28px;" alt="weatherimage"/>
-                    <p class="mb-1" style="font-size: 200%;"><span id="current-max"></span>&deg;<span class="text-muted">/<span id="current-min"></span>&deg;</span></p>
+                    <div class="row">
+                        <img id="day-weather-icon"
+                            style="width: 50px; height: 50px; margin: auto; padding: auto; margin-top: 15px; margin-bottom: -16px;"
+                            alt="weatherimage" />
+                    </div>
+
+                    <div class="row" style="float: bottom;">
+                        <p class="mb-1" style="font-size: 200%;"><span id="current-max"></span>&deg;<span
+                                class="text-muted">/<span id="current-min"></span>&deg;</span></p>
+                    </div>
                 </div>
             </div>
 
@@ -47,25 +55,28 @@
                         <tr>
                             <td id="day1" class="font-weight-normal align-middle"></td>
                             <td class="float-right font-weight-normal">
-                                <p class="mb-1"><span id="max1"></span>&deg;<span class="text-muted">/<span id="min1"></span>&deg;</span></p>
+                                <p class="mb-1"><span id="max1"></span>&deg;<span class="text-muted">/<span
+                                            id="min1"></span>&deg;</span></p>
                             </td>
                             <td class="float-right mr-3">
-                                <img id="img1"/>
+                                <img id="img1" />
                             </td>
                         </tr>
                         <tr>
                             <td id="day2" class="font-weight-normal align-middle"></td>
                             <td class="float-right font-weight-normal">
-                                <p class="mb-1"><span id="max2"></span>&deg;<span class="text-muted">/<span id="min2"></span>&deg;</span></p>
+                                <p class="mb-1"><span id="max2"></span>&deg;<span class="text-muted">/<span
+                                            id="min2"></span>&deg;</span></p>
                             </td>
                             <td class="float-right mr-3">
-                                <img id="img2"/>
+                                <img id="img2" />
                             </td>
                         </tr>
                         <tr>
                             <td id="day3" class="font-weight-normal align-middle"></td>
                             <td class="float-right font-weight-normal">
-                                <p class="mb-1"><span id="max3"></span>&deg;<span class="text-muted">/<span id="min3"></span>&deg;</span></p>
+                                <p class="mb-1"><span id="max3"></span>&deg;<span class="text-muted">/<span
+                                            id="min3"></span>&deg;</span></p>
                             </td>
                             <td class="float-right mr-3">
                                 <img id="img3" />
@@ -74,7 +85,8 @@
                         <tr>
                             <td id="day4" class="font-weight-normal align-middle"></td>
                             <td class="float-right font-weight-normal">
-                                <p class="mb-1"><span id="max4"></span>&deg;<span class="text-muted">/<span id="min4"></span>&deg;</span></p>
+                                <p class="mb-1"><span id="max4"></span>&deg;<span class="text-muted">/<span
+                                            id="min4"></span>&deg;</span></p>
                             </td>
                             <td class="float-right mr-3">
                                 <img id="img4" />
@@ -83,7 +95,8 @@
                         <tr>
                             <td id="day5" class="font-weight-normal align-middle"></td>
                             <td class="float-right font-weight-normal">
-                                <p class="mb-1"><span id="max5"></span>&deg;<span class="text-muted">/<span id="min5"></span>&deg;</span></p>
+                                <p class="mb-1"><span id="max5"></span>&deg;<span class="text-muted">/<span
+                                            id="min5"></span>&deg;</span></p>
                             </td>
                             <td class="float-right mr-3">
                                 <img id="img5" />
@@ -92,7 +105,8 @@
                         <tr>
                             <td id="day6" class="font-weight-normal align-middle"></td>
                             <td class="float-right font-weight-normal">
-                                <p class="mb-1"><span id="max6"></span>&deg;<span class="text-muted">/<span id="min6"></span>&deg;</span></p>
+                                <p class="mb-1"><span id="max6"></span>&deg;<span class="text-muted">/<span
+                                            id="min6"></span>&deg;</span></p>
                             </td>
                             <td class="float-right mr-3">
                                 <img id="img6" />
