--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="row" style="float: bottom;">
-                        <p class="mb-1" style="font-size: 200%;"><span id="current-max"></span>&deg;<span
+                        <p class="mb-1" style="font-size: 200%; margin-right: 12px;"><span id="current-max"></span>&deg;<span
                                 class="text-muted">/<span id="current-min"></span>&deg;</span></p>
                     </div>
                 </div>
