--- a/newTab.html
+++ b/newTab.html
@@ -23,22 +23,22 @@
                     </div>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form id="indexform">
                         <div class="form-group text-left">
                             <label for="inputName">Name</label>
-                            <input type="text" class="form-control" id="inputName" aria-describedby="inputName"
-                                minlength="1" maxlength="34">
+                            <input id="inputName" type="text" class="form-control" aria-describedby="inputName"
+                                maxlength="34">
                         </div>
                         <div class="form-group text-left">
                             <label for="inputURL">URL</label>
-                            <input type="url" class="form-control" id="inputURL" aria-describedby="inputURL">
+                            <input id="inputURL" type="url" class="form-control" aria-describedby="inputURL">
                         </div>
 
-                        <input type="text" class="form-control" id="inputID">
+                        <input id="inputID" type="text" class="form-control" style="display: none;">
 
                         <div class="modal-footer">
-                            <button class="btn btn-secondary">Remove</button>
-                            <button type="submit" class="btn btn-primary">Set</button>
+                            <button id="removeIndex" class="btn btn-secondary">Remove</button>
+                            <button id="addIndex" type="submit" class="btn btn-primary">Set</button>
                         </div>
                     </form>
                 </div>
