--- a/newTab.html
+++ b/newTab.html
@@ -38,7 +38,7 @@
 
                         <div class="modal-footer">
                             <button id="removeIndex" class="btn btn-secondary">Remove</button>
-                            <button id="addIndex" type="submit" class="btn btn-primary">Set</button>
+                            <button id="addIndex" type="submit" class="btn btn-primary">Done</button>
                         </div>
                     </form>
                 </div>
