--- a/newTab.html
+++ b/newTab.html
@@ -16,7 +16,7 @@
         <div id="favmod" class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Add shortcut</h5>
+                    <h5 id="mTshortcut" class="modal-title"></h5>
                     <div type="button" data-dismiss="modal" aria-label="Close">
                         <span class="hoverdarken" aria-hidden="true"><i class="fa fa-times fa-lg"
                                 aria-hidden="true"></i></span>
