--- a/newTab.html
+++ b/newTab.html
@@ -37,6 +37,7 @@
                         <input id="inputID" type="text" class="form-control" style="display: none;">
 
                         <div class="modal-footer">
+                            <button style="display: none;"></button>
                             <button id="removeIndex" class="btn btn-secondary">Remove</button>
                             <button id="addIndex" type="submit" class="btn btn-primary">Done</button>
                         </div>
